[FIX] contraste text color

--- a/app/layout.css
+++ b/app/layout.css
@@ -48,7 +48,7 @@ body {
 .block_white {
     background: rgba(196, 188, 188, 0.827);
     padding: 20px;
-    color:"black";
+    color: rgba(0, 0, 0);
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
 }
